It is okay to turn undefined into null because we are producing values for a JSON representation (InspectorValue) and JSON has a `null` value and no `undefined` value. https://bugs.webkit.org/show_bug.cgi?id=165506

Patch by Karim H <karim@karhm.com> on 2016-12-09
Reviewed by Darin Adler.

* bindings/ScriptValue.cpp:
(Inspector::jsToInspectorValue):

Canonical link: https://commits.webkit.org/183306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209650 268f45cc-cd09-0410-ab3c-d52691b4dbfc